--- a/club.html
+++ b/club.html
@@ -18,10 +18,10 @@
         <div class="logo__container">
             <img src="Imagenes/logo31.png" alt="Logo de Luxana" class="logo">
         </div>
-        <a class="nav_link" href="/WebLuxana/index.html#inicio">Inicio</a>
-        <a class="nav_link" href="/WebLuxana/index.html#eventos">Eventos</a>
-        <a class="nav_link" href="/WebLuxana/index.html#actividades">Actividades</a>
-        <a class="nav_link" href="/WebLuxana/index.html#contacto">Contacto</a>
+        <a class="nav_link" href="/index.html#inicio">Inicio</a>
+        <a class="nav_link" href="/index.html#eventos">Eventos</a>
+        <a class="nav_link" href="/index.html#actividades">Actividades</a>
+        <a class="nav_link" href="/index.html#contacto">Contacto</a>
     </nav>
 
     <div class="opaco1">
@@ -32,10 +32,10 @@
         </div>
 
         <div>
-            <img class="img_club_juegos" src="/WebLuxana/Imagenes/juegosdemesa.jpeg" alt="juegos de mesa">
-            <img class="img_club_juegos" src="/WebLuxana/Imagenes/dado1.jpeg" alt="dados">
-            <img class="img_club_juegos" src="/WebLuxana/Imagenes/dado2.jpeg" alt="dados">
-            <img class="img_club_juegos" src="/WebLuxana/Imagenes/dado3.jpeg" alt="dados">
+            <img class="img_club_juegos" src="/Imagenes/juegosdemesa.jpeg" alt="juegos de mesa">
+            <img class="img_club_juegos" src="/Imagenes/dado1.jpeg" alt="dados">
+            <img class="img_club_juegos" src="/Imagenes/dado2.jpeg" alt="dados">
+            <img class="img_club_juegos" src="/Imagenes/dado3.jpeg" alt="dados">
         </div>
     </div>
 
@@ -65,7 +65,7 @@
                         <label for="txtCantidadDeJugadores" class="form-label">Cantidad de Jugadores</label>
                         <input type="number" id="txtCantidadDeJugadores" class="form-control mb-3" required>
     
-                        <label for="txtTiempoDeJuego" class="form-label">Tiempo de Juego (minutos)</label>
+                        <label for="txtTiempoDeJuego" class="form-label">Tiempo de Juego</label>
                         <input type="number" id="txtTiempoDeJuego" class="form-control mb-3" required>
     
                         <label for="txtImgUrl" class="form-label">Imagen URL</label>
